# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  23 Jul 2002; Phil Bordelon <sunflare@gentoo.org> emerge.1: Updated the
  man page to match some changes in the latest version of portage, along
  with some fixes recommended by drobbins.

*portage-2.0.17 (23 Jul 2002)

  23 Jul 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed a bug
  pointed out by trance -- dep_nomatch() was still using the old (deleted)
  match() function.  Now it's using a new match() method.

*portage-2.0.16 (22 Jul 2002)

  22 Jul 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: changed xcache
  behavior so that the cache gets totally thrown away when the masks are
  updated.  Also revamped carpaski's code so we can avoid loading xcache from
  disk if we simply plan to throw it away.  This necessitated the creation of a
  new file in /var/cache/edb: mtimes.  This file stores mtimes for various
  important filesystem objects.  Also added support to not regenerate the GNU
  info directory index if the mtime on /usr/share/info has not changed since
  previous invocation.

  22 Jul 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: moved
  security handling code from emerge to portage.py; also moved group "wheel"
  check to portage.py.  Added additional security checks and permissions fixes
  to the cache handling functions.

  22 Jul 2002: Daniel Robbins <drobbins@gentoo.org> emerge: fixed a bug
  reported by woodchip related to merging packages.  When using --usepkg, a
  package wouldn't be used if there was a newer unmasked version of the ebuild
  available, even if the package in question was the right selection.
  
  22 Jul 2002; Daniel Robbins <drobbins@gentoo.org> emerge: fixed create() code
  and consolidated some functions.  My goal is to simplify the emerge code
  until it's clean, at which point we can begin adding new features to emerge